@@ -670,10 +670,10 @@ class GedcomParser:
                         if child:
                             child.add_address(self.addr)
                             self.db.commit_person(child, self.trans)
-                #if len(self.family.get_source_references()) == 0:
-                #    sref = RelLib.SourceRef()
-                #    sref.set_base_handle(self.def_src.get_handle())
-                #    self.family.add_source_reference(sref)
+                if len(self.family.get_source_references()) == 0:
+                    sref = RelLib.SourceRef()
+                    sref.set_base_handle(self.def_src.get_handle())
+                    self.family.add_source_reference(sref)
                 self.db.commit_family(self.family, self.trans)
                 del self.family
             elif matches[2] == "INDI":
@@ -683,10 +683,10 @@ class GedcomParser:
                 self.person = self.find_or_create_person(self.map_gid(gid))
                 self.added[self.person.get_handle()] = 1
                 self.parse_individual()
-                #if len(self.person.get_source_references()) == 0:
-                #    sref = RelLib.SourceRef()
-                #    sref.set_base_handle(self.def_src.get_handle())
-                #    self.person.add_source_reference(sref)
+                if len(self.person.get_source_references()) == 0:
+                    sref = RelLib.SourceRef()
+                    sref.set_base_handle(self.def_src.get_handle())
+                    self.person.add_source_reference(sref)
                 self.db.commit_person(self.person, self.trans)
                 del self.person
             elif matches[2] in ["SUBM","SUBN","REPO"]:
